--- a/src/app/bookmark/bookmark.component.css
+++ b/src/app/bookmark/bookmark.component.css
@@ -10,8 +10,7 @@ a {
 }
 
 .card .card-header {
-  border-top-right-radius: 20px;
-  border-top-left-radius: 20px;
+  border-radius: 20px;
 }
 
 .card-header p {
